; ModuleID = '/home/carl/AnghaBench/Quake-III-Arena/code/bspc/extr_faces.c_MakeFaces.c'
source_filename = "/home/carl/AnghaBench/Quake-III-Arena/code/bspc/extr_faces.c_MakeFaces.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [19 x i8] c"--- MakeFaces ---\0A\00", align 1
@c_merge = common dso_local global i64 0, align 8
@c_subdivide = common dso_local global i64 0, align 8
@c_nodefaces = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [15 x i8] c"%5i makefaces\0A\00", align 1
@.str.2 = private unnamed_addr constant [12 x i8] c"%5i merged\0A\00", align 1
@.str.3 = private unnamed_addr constant [16 x i8] c"%5i subdivided\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @MakeFaces(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = call i32 (i8*, ...) @qprintf(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str, i64 0, i64 0))
  store i64 0, i64* @c_merge, align 8
  store i64 0, i64* @c_subdivide, align 8
  store i64 0, i64* @c_nodefaces, align 8
  %4 = load i32*, i32** %2, align 8
  %5 = call i32 @MakeFaces_r(i32* %4)
  %6 = load i64, i64* @c_nodefaces, align 8
  %7 = call i32 (i8*, ...) @qprintf(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.1, i64 0, i64 0), i64 %6)
  %8 = load i64, i64* @c_merge, align 8
  %9 = call i32 (i8*, ...) @qprintf(i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.2, i64 0, i64 0), i64 %8)
  %10 = load i64, i64* @c_subdivide, align 8
  %11 = call i32 (i8*, ...) @qprintf(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.3, i64 0, i64 0), i64 %10)
  ret void
}

declare dso_local i32 @qprintf(i8*, ...) #1

declare dso_local i32 @MakeFaces_r(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
